ndb - bug#49263 - reasonable error message when failing to recreate DD object during node/system restart